Add project documentation with run guide